add sample order

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -154,6 +154,15 @@ button.small{
   font-family: 'Ubuntu', sans-serif;
 }
 
+a{
+  color: black;
+}
+
+a:hover{
+  text-decoration: none;
+  color: black;
+}
+
 
 .badge{
   background-color: #f02020;
