--- a/frontend/src/style/ProductDetail.css
+++ b/frontend/src/style/ProductDetail.css
@@ -144,7 +144,28 @@
 .review-box .review-show{
     flex: 2 1 50rem;
     padding: 2rem;
+    width: 100%;
+    max-height: 50rem;
+    overflow: scroll;
+}
 
+.review_card{
+    max-width: 70rem;
+    margin: auto;
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 2rem;
+    margin-bottom: 3rem;
+}
+
+.review_card_name{
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.review_card_name small{
+    font-size: 11px;
+    margin-left: 1rem;
 }
 
 .review-box .review-write{
