--- a/frontend/src/style/SellerScreen.css
+++ b/frontend/src/style/SellerScreen.css
@@ -1,13 +1,14 @@
 .seller-screen{
     display: flex;
     justify-content: space-between;
-    margin-top: 4rem;
+    margin-top: 7rem;
     flex-wrap: wrap;
 
 }
 
 .seller-info-container{
-    width: 45%;
+    width: 33%;
+    padding: 2rem;
 }
 
 .seller-info-logo{
@@ -15,7 +16,6 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-
 }
 
 .seller-info-name{
@@ -26,7 +26,7 @@
 }
 
 .seller-info-logo img{
-    width: 35vw;
+    width: 26vw;
     min-width: 40rem;
     height: auto;
     border: 3px solid black;
@@ -34,7 +34,10 @@
 }
 
 .seller-products{
-    width: 55%;
+    width: 67%;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
 }
 
 .seller-info-information{
@@ -43,6 +46,10 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 1rem;
+}
+
+.seller-info-information label{
+    min-width: 14rem;
 }
 
 .seller-info-button{
@@ -74,6 +81,9 @@
     }
     .seller-info-container button{
         width: 25%;
+    }
+    .seller-products{
+        width: 100%;
     }
 }
 @media (max-width:940px){
