--- a/frontend/src/style/Footer.css
+++ b/frontend/src/style/Footer.css
@@ -3,33 +3,24 @@
 /* Footer */
 
 .footer {
-    /* background-color: #74c0c4; */
     color: black;
-    min-height: 20rem;
-    margin-top: 10rem;
+    min-height: 12rem;
+
+    font-family: 'Fugaz One', cursive;
+    padding: 3rem 2rem 0rem 2rem;
+    background-color: #e6e6e6;
   }
 
-.footer-row{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    height: 500%;
-    background-color: black;
-    color: #e9eff0;
-    font-family: 'Fugaz One', cursive;
-    padding: 0 2rem 0 2rem;
-  }
-  
   .footer-text{
     text-align: center;
-    font-size:3vw;
+    font-size:3rem;
+    padding: 1.3rem;
     box-shadow: -12px 12px;
-    border: 0.5px solid white;
+    border: 2px solid black;
+    border-radius: 20px;
   }
   
-  .footer-about{
+  /* .footer-about{
     padding-right: 6rem;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 700;
@@ -44,16 +35,28 @@
     font-size: 3rem; 
     color: #dedede;
   }
-  
+   */
   .footer-reserve{
-    font-size: 1vw;
-    padding-top: 4rem;
+    font-size: 11px;
+    padding-top: 2rem;
     color: #bdbdbd;
   }
   
   
-  /* @media (max-width:900px){
-      .footer{
-          text-align: center;
-      }
-  } */
+  @media (max-width:600px){
+    .footer-text{
+      font-size: 2.1rem;
+      padding: 1rem;
+    }
+  }
+
+  @media (max-width: 410px){
+    .footer-text{
+      font-size: 16px;
+    }
+
+    .footer {
+      padding: 3rem 0rem 0rem 0rem;
+    }
+  }
+  
