--- a/frontend/src/style/Header.css
+++ b/frontend/src/style/Header.css
@@ -10,6 +10,8 @@
     align-items: center;
     position: relative;
     flex-wrap:wrap;
+    /* border: 5px solid black; */
+    padding: 5px;
 }
 
 .header a {
@@ -39,6 +41,11 @@ color: black;
   
 
 /* Search */
+.search{
+  transform: translateY(-20px);
+  position: relative;
+}
+
 .search button{
     border: none;
     border-right: none;
@@ -52,8 +59,18 @@ color: black;
     width: 20vw;
   
   }
-  
- 
+
+  .search_reset_button{
+    position: absolute;
+    top: 5px;
+    left: 18vw;
+    background-color: white;
+    color: black;
+    font-weight: 800;
+    font-size: 2rem;
+    cursor: pointer;
+  }
+
 
 
 /* Dropdown */
@@ -75,6 +92,8 @@ color: black;
     font-size: 13px;
     text-align: center;
     border: 1px solid black;
+    background-color: rgba(255, 255, 255, 0.3);
+
   }
   .dropdown:hover .dropdown-content{
     display: block;
@@ -165,12 +184,12 @@ background-color: white;
         position:fixed;
         bottom: 0;
         left: 0;
-        width: 100%;
+        width: 100vw;
         z-index: 1;
         display: flex;
         justify-content: space-around;
         padding-top: 2rem;
-
+        width: 100%;
         background-color: rgba(255, 255, 255, 0.5);
 
     }
@@ -180,32 +199,23 @@ background-color: white;
         top: auto;
         background-color: rgba(255, 255, 255, 0.5);
 
+    }
+
+    .search input{
+      width: 35vw;
     }
 
 
 }
-@media ( max-width: 450){
-    .header-menu{
-        position:fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        z-index: 1;
-        display: flex;
-        justify-content: space-around;
-        padding-top: 2rem;
 
-        background-color: rgba(255, 255, 255, 0.5);
+@media (max-width: 555px){
+  .search input{
+    width: 60vw;
+  }
+}
 
-    }
-
-    .header-menu .dropdown-content{
-        bottom: 100%;
-        top: auto;
-        background-color: rgba(255, 255, 255, 0.5);
-
-    }
-
-
-
+@media (max-width: 410px){
+  .header-menu{
+    font-size: 11px;
+  }
 }
