--- a/frontend/src/style/OrderDetail.css
+++ b/frontend/src/style/OrderDetail.css
@@ -87,7 +87,8 @@
     box-shadow: -2rem 2rem  black;
     margin-left: 5rem;
     padding: 3rem;
-    border: 1px solid black;
+    border: 2px solid black;
+    border-radius: 20px;
     font-size: 2rem;
     margin-top: 5rem;
   }
